methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:4: error: type mismatch;
 found   : Unit
 required: Int
    for (i<-1 to nbPas) {
          ^MethodsArgs:8: error: type mismatch;
 found   : Unit
 required: Int
     for (i<-1 to nbPas) {
           ^